--- a/01-simple-example/index.html
+++ b/01-simple-example/index.html
@@ -7,5 +7,8 @@
   <body>
     <h1 id="myHeading">JavaScript and the DOM</h1>
     <p>Making a web page interactive</p>
+    <input type="input" id="myTextInput">
+    <button id="myButton">Change headline colour</button>
+    <script src="app.js"></script>
   </body>
 </html>
