--- a/01-simple-example/index.html
+++ b/01-simple-example/index.html
@@ -7,8 +7,16 @@
   <body>
     <h1 id="myHeading">JavaScript and the DOM</h1>
     <p>Making a web page interactive</p>
-    <input type="input" id="myTextInput">
-    <button id="myButton">Change headline colour</button>
+	<p>Things that are purple:</p>
+	<ul>
+		<li>grapes</li>
+		<li class="error-not-purple">Oranges</li>
+		<li>amethyst</li>
+		<li>lavender</li>
+		<li class="error-not-purple">Fire Trucks</li>
+		<li class="error-not-purple">Snow</li>
+		<li>plums</li>
+	</ul>
     <script src="app.js"></script>
   </body>
 </html>
