--- a/01-simple-example/index.html
+++ b/01-simple-example/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1 id="myHeading">JavaScript and the DOM</h1>
     <p>Making a web page interactive</p>
-	<p>Things that are purple:</p>
+	<p title="label">Things that are purple:</p>
 	<ul>
 		<li>grapes</li>
 		<li class="error-not-purple">Oranges</li>
