--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>JavaScript and the DOM</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <h1 id="myHeading">JavaScript and the DOM</h1>
-    <p>Making a web page interactive</p>
-	<p title="label">Things that are purple:</p>
+<head>
+	<title>JavaScript and the DOM</title>
+	<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+	<h1 id="myHeading">JavaScript and the DOM</h1>
+	<p>Making a web page interactive</p>
+	<p class="description">Things that are purple:</p>
+	<input class="description" type="text">
+	<button class="description">Change list description</button>
 	<ul>
 		<li>grapes</li>
-		<li class="error-not-purple">Oranges</li>
 		<li>amethyst</li>
 		<li>lavender</li>
-		<li class="error-not-purple">Fire Trucks</li>
-		<li class="error-not-purple">Snow</li>
 		<li>plums</li>
 	</ul>
-    <script src="app.js"></script>
-  </body>
+	<script src="app.js"></script>
+</body>
 </html>
