Adding list items to unordered list

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 			<li>lavender</li>
 			<li>plums</li>
 		</ul>
+		<input class="addItemInput" type="text">
+		<button class="addItemButton">Add item</button>
 	</div>
 	<script src="app.js"></script>
 </body>
