--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		</ul>
 		<input class="addItemInput" type="text">
 		<button class="addItemButton">Add item</button>
+		<button class="removeItemButton">Remove last item</button>
 	</div>
 	<script src="app.js"></script>
 </body>
