Working with previous element and insert before

--- a/index.html
+++ b/index.html
@@ -13,14 +13,25 @@
 		<input class="description" type="text">
 		<button class="description">Change list description</button>
 		<ul>
-			<li>grapes</li>
-			<li>amethyst</li>
-			<li>lavender</li>
-			<li>plums</li>
+			<li>grapes 
+				<button class="up">Up</button>
+				<button class="remove">Remove</button>
+			</li>
+			<li>amethyst 
+				<button class="up">Up</button>
+				<button class="remove">Remove</button>
+			</li>
+			<li>lavender 
+				<button class="up">Up</button>
+				<button class="remove">Remove</button>
+			</li>
+			<li>plums 
+				<button class="up">Up</button>
+				<button class="remove">Remove</button>
+			</li>
 		</ul>
 		<input class="addItemInput" type="text">
 		<button class="addItemButton">Add item</button>
-		<button class="removeItemButton">Remove last item</button>
 	</div>
 	<script src="app.js"></script>
 </body>
