Add down button for list items

--- a/index.html
+++ b/index.html
@@ -15,22 +15,27 @@
 		<ul>
 			<li>grapes 
 				<button class="up">Up</button>
+				<button class="down">Down</button>
 				<button class="remove">Remove</button>
 			</li>
 			<li>amethyst 
 				<button class="up">Up</button>
+				<button class="down">Down</button>
 				<button class="remove">Remove</button>
 			</li>
 			<li>lavender 
 				<button class="up">Up</button>
+				<button class="down">Down</button>
 				<button class="remove">Remove</button>
 			</li>
 			<li>plums 
 				<button class="up">Up</button>
+				<button class="down">Down</button>
 				<button class="remove">Remove</button>
 			</li>
 		</ul>
 		<input class="addItemInput" type="text">
+				<button class="down">Down</button>
 		<button class="addItemButton">Add item</button>
 	</div>
 	<script src="app.js"></script>
