Add automatic button adding to list items

--- a/index.html
+++ b/index.html
@@ -13,29 +13,12 @@
 		<input class="description" type="text">
 		<button class="description">Change list description</button>
 		<ul>
-			<li>grapes 
-				<button class="up">Up</button>
-				<button class="down">Down</button>
-				<button class="remove">Remove</button>
-			</li>
-			<li>amethyst 
-				<button class="up">Up</button>
-				<button class="down">Down</button>
-				<button class="remove">Remove</button>
-			</li>
-			<li>lavender 
-				<button class="up">Up</button>
-				<button class="down">Down</button>
-				<button class="remove">Remove</button>
-			</li>
-			<li>plums 
-				<button class="up">Up</button>
-				<button class="down">Down</button>
-				<button class="remove">Remove</button>
-			</li>
+			<li>grapes</li>
+			<li>amethyst</li>
+			<li>lavender</li>
+			<li>plums</li>
 		</ul>
 		<input class="addItemInput" type="text">
-				<button class="down">Down</button>
 		<button class="addItemButton">Add item</button>
 	</div>
 	<script src="app.js"></script>
